--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon --watch *.ts --exec ts-node index.ts"
   },
   "author": "Augustine Smith",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8"
