--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "express-jwt-auth",
   "version": "0.1.0",
   "description": "JWT Authentication in ExpressJS",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "start": "nodemon --watch *.ts --exec ts-node index.ts"
   },
